# Wta

./: brute.py
Wta/: main.py  pyproject.toml
Wta/answer/: Results.txt
Wta/data/: 0.npy  sink.csv
Wta/src/: model.py  utils.py
