[tool.poetry]
name = "wta"
version = "0.1.0"
description = ""
authors = ["student4"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.22.4"
numba = "^0.55.2"
prettytable = "^3.3.0"
matplotlib = "^3.5.2"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
